2008-10-20  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-check-html-for-indentation): Change regular
	expression for indentation warning to match only HTML at the
	beginning of the line.

2008-10-20  Dias Badekas <dbadekas-@-aia.gr>

	* php-mode.el (php-constants): Add date and time constants of PHP.

2008-05-21  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.texi (Indentation): PHP mode's indentation rules are
	inherited from C mode, not the PEAR coding standards by default.
	Explain when PEAR indentation is on.
	(Indentation, Motion, Completion, Embedded HTML): Modify various
	concept index entries.
	(Completion, Index Menu): Use "its" when describing the value of a
	variable.

	* php-mode.el (php-mode): Add "\s *" after "&?" in
	defun-prompt-regexp, since functions can have an ampersand before
	the identifier with whitespace added.
	(php-speedbar-config, php-mode-speedbar-open, php-manual-url)
	(php-mode-force-pear): Remove backslash that causes continuation
	of the line in docstrings.

2008-05-02  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.texi (Completion): Give example of making a
	php-completion-file from the PHP manual HTMl files.
	(Change Logs): Add index entries to this section.
	(Customization): Add notes as source code comments about what
	should be documented in this section.

2008-04-12  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.texi: Insert various comments for maintaining the
	manual.  Make grammatical fixes throughout document.
	(Introduction): Add description of intended audience.
	(Editing): Document mark-defun, narrow-to-defun and widen.
	(Change Logs): Mention `C-x 4 a' can be run from PHP file or Diff
	mode buffer.
	(Contributors): Add Aaron Iba.

	* php-mode.el: Update modification date to today's date.
	(php-tags, php-tags-key): Move definition to above php-mode to
	avoid byte compiler warning.  Use eval-when-compile for
	regexp-opt.